# pypi_upload_test

./: README.md  setup.cfg
src/wzc_mypackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
