[metadata]
name = wzc_mypackage
version = 0.0.1
author = wzc
author_email = 1061175755@qq.com
description = pypi upload test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Bigpop/pypi_upload_test
project_urls =
    Bug Tracker = https://github.com/Bigpop/pypi_upload_test/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
